tests/ui/endpoint_invalid_concurrency_limit.stderr
error: Unknown value: `fast`
 --> tests/ui/endpoint_invalid_concurrency_limit.rs:8:56
  |
8 |     #[endpoint(subject = "status", concurrency_limit = "fast")]
  |                                                        ^^^^^^
